# eduhub

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  PHASE_II_MERGE_REQUEST.md  README.md  SECURITY-CHECKLIST.md  UPDATE_CORS.md  VERCEL-DEPLOYMENT.md  agent-handoff-context.md  agent-handoff-history.md  agent-handoff-instruction.md  agent-handoff.md  auth0-environment-template.txt  benchmark-py311.json  benchmark-py39.json  deploy.sh  docker-compose.yml  plone-site.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  test_auth_flow.py  test_template.csv  tox.ini
.cursor/rules/RMM-workflow/: agent-handoff.mdc  task-execution-workflow.mdc  task-subtask-expansion.mdc  terminal-command-visibility.mdc  testing-efficiency.mdc  (+1 more)
.github/: CI_TEST.md  DEPLOY_INSTRUCTIONS.md  QUALITY_GATES.md  SECRETS.md
.github/workflows/: ci.yml
docs/: README.md  api-structure.md  architecture.md  authentication.md  demo-preparation-guide.md  deployment_considerations.md  developer_onboarding.md  feature-task-planning-template.md  future-gui-plans.md  gui_development_strategy.md  oembed-cache-strategy.md  performance-benchmark-report.md  plone_5day_plan.md  plone_django_web_platform_5day_plan.md  plone_overview.md  tech-stack.md
docs/api/: workflows-openapi-schema.md
docs/architecture/: performance-plone-integration.md  plone-integration.md  system-architecture.md  tech-stack-overview.md
docs/archive/: ARCHIVE_NOTE.md  api-structure.md
docs/development/: feature-planning-template.md  gui-development-plans.md  phase-4-planning.md  testing-strategy.md
docs/getting-started/: authentication-setup.md  developer-onboarding.md
docs/non-technical/: bootstrap-and-initial-setup-report.md
docs/phase-demos/: phase-2-python311-async-demo.md
docs/user-guides/: workflow-management-guide.md
frontend/: .env.example  .env.production.example  Dockerfile  Dockerfile.prod  GUI_DESIGN_PLAN.md  README.md  USER_STORY_DEMO_SCRIPT.md  WORK_COMPLETED_SUMMARY.md  docker-compose.yml  docker-dev.sh  nginx.conf  package-lock.json  package.json  sample_schedule.csv  test.html  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: demonstrate_async_performance.py  populate_plone.py  quick_integration_test.py  test_plone_integration.py
src/: __init__.py
src/eduhub/: __init__.py  main.py  mock_plone.py  performance_demo.py  plone_content_endpoints.py  plone_integration.py  rbac_demo.py
src/hello/: __init__.py
tasks/: tasks-gui.md  tasks-initial-setup.md  tasks-overall-project-plan-addendum.md  tasks-overall-project-plan.md  tasks-phase-1-initial-setup.md  tasks-phase-2-python311-upgrade.md  tasks-phase-3-oauth2-sso-gateway.md  tasks-phase-4-csv-schedule-importer.md  tasks-phase-5-rich-media-embeds.md  tasks-phase-6-open-data-api-endpoints.md  tasks-phase-7-role-based-workflow-templates.md  tasks-phase-8-real-time-alert-broadcasting.md
tests/: test_benchmarks.py  test_endpoints.py  test_hello.py  test_oembed.py  test_oembed_cache.py  test_oembed_error_handling.py  test_oembed_simplified.py  test_open_data_endpoints.py  test_plone_content_integration.py  test_plone_integration.py  test_schedule_importer_plone.py
tests/fixtures/: invalid_workflow_template.json  sample_alert.json  sample_public_content.json  sample_schedule_demo.csv  sample_schedule_invalid.csv  sample_schedule_valid.csv  sample_workflow_template.json
tests/integration/: test_workflows_integration.py
tests/test_alerts/: __init__.py  test_prometheus_metrics.py  test_rate_limiting.py  test_services.py  test_slack_client.py  test_websocket_hub.py
tests/workflows/: test_api_contracts.py  test_api_contracts_fixed.py  test_core_logic.py  test_smoke_integration.py
(+86 files in other folders)
